@@ -19,7 +19,7 @@
 ################################################################################
 # Constants
 
-VERSION=2.9.0
+VERSION=2.9.1
 SHORTNAME="SSL_CERT"
 
 VALID_ATTRIBUTES=",startdate,enddate,subject,issuer,modulus,serial,hash,email,ocsp_uri,fingerprint,"
@@ -1300,6 +1300,7 @@ check_ocsp() {
 
                 debuglog "OCSP: issuer certificate type (1): $(${FILE_BIN} -L -b "${ISSUER_CERT_TMP}" | sed 's/.*://' )"
 
+
                 if echo "${ELEMENT_ISSUER_URI}" | grep -F -q 'p7c' ; then
                     debuglog "OCSP: converting issuer certificate from PKCS #7 to PEM"
 
@@ -1311,6 +1312,12 @@ check_ocsp() {
                 fi
 
                 debuglog "OCSP: issuer certificate type (2): $(${FILE_BIN} -L -b "${ISSUER_CERT_TMP}" | sed 's/.*://' )"
+
+                # check for errors
+                if "${FILE_BIN}" -L -b "${ISSUER_CERT_TMP}" | grep -E -q HTML ; then
+                    debuglog "OCSP: HTML page returned instead of a certificate"
+                    unknown "Unable to fetch a valid certificate issuer certificate (HTML page returned)."
+                fi
 
                 # check the result
                 if ! "${FILE_BIN}" -L -b "${ISSUER_CERT_TMP}" | grep -E -q '(ASCII|PEM)' ; then
@@ -4079,82 +4086,90 @@ main() {
         fi
 
         # Check alternate names
-        if [ -n "${ALTNAMES}" ] && [ -z "${ok}" ]; then
+        #   SUBJECT_ALTERNATIVE_NAME can also be empty
 
-            for cn in ${COMMON_NAME} ; do
+        if [ -n "${SUBJECT_ALTERNATIVE_NAME}" ] ; then
 
-                if [ "$( is_ip "${cn}" )" -eq 1 ] ; then
-                    verboselog "Skipping the matching of ${cn} as it is an IP address"
-                    continue
-                fi
+            if [ -n "${ALTNAMES}" ] && [ -z "${ok}" ] ; then
 
-                ok=""
+                debuglog "Checking alternate names"
 
-                debuglog '==============================='
-                debuglog "checking altnames against ${cn}"
-                debuglog "  SUBJECT_ALTERNATIVE_NAME = ${SUBJECT_ALTERNATIVE_NAME}"
+                for cn in ${COMMON_NAME} ; do
 
-                for alt_name in ${SUBJECT_ALTERNATIVE_NAME} ; do
-
-                    debuglog "check Altname: ${alt_name}"
-
-                    if echo "${alt_name}" | grep -q -i "^\\*\\." ; then
-
-                        # Match the domain
-                        debuglog "the altname ${alt_name} begins with a '*'"
-                        debuglog "checking if the common name matches ^$(echo "${alt_name}" | cut -c 3-)\$"
-
-                        if echo "${cn}" | grep -q -i "^$(echo "${alt_name}" | cut -c 3-)\$" ; then
-                            debuglog "the common name ${cn} matches ^$( echo "${alt_name}" | cut -c 3- )\$"
-                            ok="true"
-
-                        fi
-
-                        # Or the literal with the wildcard
-                        debuglog "checking if the common name matches ^$(echo "${alt_name}" | sed -e 's/[.]/[.]/g' -e 's/[*]/[A-Za-z0-9_\-]*/' )\$"
-
-                        if echo "${cn}" | grep -q -i "^$(echo "${alt_name}" | sed -e 's/[.]/[.]/g' -e 's/[*]/[A-Za-z0-9_\-]*/' )\$" ; then
-                            debuglog "the common name ${cn} matches ^$(echo "${alt_name}" | sed -e 's/[.]/[.]/g' -e 's/[*]/[A-Za-z0-9_\-]*/' )\$"
-                            ok="true"
-                        fi
-
-                        # Or if both are exactly the same
-                        debuglog "checking if the common name matches ^${alt_name}\$"
-
-                        if echo "${cn}" | grep -q -i "^${alt_name}\$" ; then
-                            debuglog "the common name ${cn} matches ^${alt_name}\$"
-                            ok="true"
-                        fi
-
-                    else
-
-                        if echo "${cn}" | grep -q -i "^${alt_name}$" ; then
-                            ok="true"
-                        fi
-
+                    if [ "$( is_ip "${cn}" )" -eq 1 ] ; then
+                        verboselog "Skipping the matching of ${cn} as it is an IP address"
+                        continue
                     fi
 
-                    if [ -n "${ok}" ] ; then
+                    ok=""
+
+                    debuglog '==============================='
+                    debuglog "checking altnames against ${cn}"
+                    debuglog "  SUBJECT_ALTERNATIVE_NAME = ${SUBJECT_ALTERNATIVE_NAME}"
+
+                    for alt_name in ${SUBJECT_ALTERNATIVE_NAME} ; do
+
+                        debuglog "check Altname: ${alt_name}"
+
+                        if echo "${alt_name}" | grep -q -i "^\\*\\." ; then
+
+                            # Match the domain
+                            debuglog "the altname ${alt_name} begins with a '*'"
+                            debuglog "checking if the common name matches ^$(echo "${alt_name}" | cut -c 3-)\$"
+
+                            if echo "${cn}" | grep -q -i "^$(echo "${alt_name}" | cut -c 3-)\$" ; then
+                                debuglog "the common name ${cn} matches ^$( echo "${alt_name}" | cut -c 3- )\$"
+                                ok="true"
+
+                            fi
+
+                            # Or the literal with the wildcard
+                            debuglog "checking if the common name matches ^$(echo "${alt_name}" | sed -e 's/[.]/[.]/g' -e 's/[*]/[A-Za-z0-9_\-]*/' )\$"
+
+                            if echo "${cn}" | grep -q -i "^$(echo "${alt_name}" | sed -e 's/[.]/[.]/g' -e 's/[*]/[A-Za-z0-9_\-]*/' )\$" ; then
+                                debuglog "the common name ${cn} matches ^$(echo "${alt_name}" | sed -e 's/[.]/[.]/g' -e 's/[*]/[A-Za-z0-9_\-]*/' )\$"
+                                ok="true"
+                            fi
+
+                            # Or if both are exactly the same
+                            debuglog "checking if the common name matches ^${alt_name}\$"
+
+                            if echo "${cn}" | grep -q -i "^${alt_name}\$" ; then
+                                debuglog "the common name ${cn} matches ^${alt_name}\$"
+                                ok="true"
+                            fi
+
+                        else
+
+                            if echo "${cn}" | grep -q -i "^${alt_name}$" ; then
+                                ok="true"
+                            fi
+
+                        fi
+
+                        if [ -n "${ok}" ] ; then
+                            break;
+                        fi
+
+                    done
+
+                    if [ -z "${ok}" ] ; then
+                        fail="${cn}"
                         break;
                     fi
 
                 done
 
-                if [ -z "${ok}" ] ; then
-                    fail="${cn}"
-                    break;
-                fi
-
-            done
-
-        fi
-
-        if [ -n "${fail}" ] ; then
-            prepend_critical_message "invalid CN ('$(echo "${CN}" | sed "s/|/ PIPE /g")' does not match '${fail}')"
-        else
-            if [ -z "${ok}" ] && [ -z "${COMMON_NAME_IS_AN_IP}" ] ; then
-                prepend_critical_message "invalid CN ('$(echo "${CN}" | sed "s/|/ PIPE /g")' does not match '${COMMON_NAME}')"
             fi
+
+            if [ -n "${fail}" ] ; then
+                prepend_critical_message "invalid CN ('$(echo "${CN}" | sed "s/|/ PIPE /g")' does not match '${fail}')"
+            else
+                if [ -z "${ok}" ] && [ -z "${COMMON_NAME_IS_AN_IP}" ] ; then
+                    prepend_critical_message "invalid CN ('$(echo "${CN}" | sed "s/|/ PIPE /g")' does not match '${COMMON_NAME}')"
+                fi
+            fi
+
         fi
 
         debuglog " CN check finished"
