@@ -1,2 +1,2 @@
-Added an option (```--debug-time```) to print the elapsed time in the debugging output
-
+ * Accepts certificates without subject alternative names
+ * Added an option (```--debug-time```) to print the elapsed time in the debugging output
